--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sovrynmobile",
+  "name": "sovryn-mobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.5.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "ansi-regex": "^5.0.1",
+    "ethers": "^5.5.2",
     "react": "17.0.2",
-    "react-native": "0.66.3"
+    "react-native": "0.66.3",
+    "react-native-default-preference": "^1.4.3",
+    "react-native-device-info": "^8.4.8",
+    "react-native-encrypted-storage": "^4.0.2",
+    "react-native-get-random-values": "^1.7.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -21,9 +34,12 @@
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolve": "^0.0.12",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
