--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@ethersproject/shims": "^5.5.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@sentry/react-native": "^3.2.10",
     "ansi-regex": "^5.0.1",
+    "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.2",
+    "events": "^3.3.0",
+    "hdkey": "^2.0.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-default-preference": "^1.4.3",
@@ -30,7 +36,9 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/hdkey": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/node": "^17.0.8",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
