--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@rsksmart/rsk3": "^0.3.4",
     "@sentry/react-native": "^3.2.10",
     "ansi-regex": "^5.0.1",
+    "eth-lib": "^0.1.29",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.2",
     "events": "^3.3.0",
     "hdkey": "^2.0.1",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-default-preference": "^1.4.3",
     "react-native-device-info": "^8.4.8",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-get-random-values": "^1.7.1",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1"
@@ -38,6 +42,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/hdkey": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
