--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@ethersproject/shims": "^5.5.0",
+    "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "@rsksmart/rsk3": "^0.3.4",
     "@sentry/react-native": "^3.2.10",
     "ansi-regex": "^5.0.1",
     "eth-lib": "^0.1.29",
