--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@ethersproject/shims": "^5.5.0",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@sentry/react-native": "^3.2.10",
     "ansi-regex": "^5.0.1",
+    "assert": "^1.1.1",
+    "bip32": "^3.0.1",
+    "bip39": "^3.0.4",
+    "buffer": "^4.9.2",
     "eth-lib": "^0.1.29",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.2",
@@ -27,15 +30,19 @@
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-crypto": "^2.2.0",
     "react-native-default-preference": "^1.4.3",
     "react-native-device-info": "^8.4.8",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-get-random-values": "^1.7.1",
     "react-native-qrcode-svg": "^6.1.2",
+    "react-native-randombytes": "^3.6.1",
     "react-native-restart": "^0.0.23",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "readable-stream": "1.0.33",
+    "stream-browserify": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -55,6 +62,7 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
+    "rn-nodeify": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "resolutions": {
@@ -70,5 +78,23 @@
       "json",
       "node"
     ]
+  },
+  "react-native": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
+  },
+  "browser": {
+    "crypto": "react-native-crypto",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
   }
 }
