--- a/ios/SovrynMobile/Info.plist
+++ b/ios/SovrynMobile/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSFaceIDUsageDescription</key>
-    <string>Secure your credentials within app.</string>
+	<string>$(PRODUCT_NAME) needs to authenticate</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
