--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@sentry/react-native": "^3.2.10",
+    "@types/react-native-modals": "^0.19.2",
     "ansi-regex": "^5.0.1",
     "assert": "^1.1.1",
     "bip32": "^3.0.1",
@@ -38,6 +39,7 @@
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-get-random-values": "^1.7.1",
     "react-native-keychain": "^8.0.0",
+    "react-native-modals": "^0.22.3",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-restart": "^0.0.23",
