--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "npx rn-nodeify --install buffer,stream,crypto --hack --yarn"
   },
   "dependencies": {
     "@ethersproject/shims": "^5.5.0",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/blur": "^3.6.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@sentry/react-native": "^3.2.10",
+    "@types/react-native-modals": "^0.19.2",
     "ansi-regex": "^5.0.1",
     "assert": "^1.1.1",
     "bip32": "^3.0.1",
@@ -35,6 +38,8 @@
     "react-native-device-info": "^8.4.8",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-get-random-values": "^1.7.1",
+    "react-native-keychain": "^8.0.0",
+    "react-native-modals": "^0.22.3",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-restart": "^0.0.23",
