--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-aes-crypto": "^2.0.0",
     "react-native-crypto": "^2.2.0",
     "react-native-default-preference": "^1.4.3",
     "react-native-device-info": "^8.4.8",
