--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7.2'
+          bundler-cache: true
       - uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'android beta'
@@ -21,9 +22,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7.2'
+          bundler-cache: true
       - uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'ios beta'
