feat(fastlane): add node to workflow action

--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -9,10 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16.13
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
+      - run: yarn install
       - uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'android beta'
@@ -22,10 +26,14 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16.13
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
+      - run: yarn install
       - uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'ios beta'
