feat(ota): code-push with appcenter enabled

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@sentry/react-native": "^3.2.10",
     "@types/react-native-modals": "^0.19.2",
     "ansi-regex": "^5.0.1",
+    "appcenter": "^4.4.3",
+    "appcenter-analytics": "^4.4.3",
+    "appcenter-crashes": "^4.4.3",
     "assert": "^1.1.1",
     "bip32": "^3.0.1",
     "bip39": "^3.0.4",
