--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,7 +138,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "0.2"
     }
     splits {
         abi {
@@ -155,6 +155,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(SW_UPLOAD_STORE_FILE)
+            storePassword SW_UPLOAD_STORE_PASSWORD
+            keyAlias SW_UPLOAD_KEY_ALIAS
+            keyPassword SW_UPLOAD_KEY_PASSWORD
+        }
     }
     buildTypes {
         debug {
@@ -166,9 +172,11 @@ android {
             }
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // As per https://reactnative.dev/docs/signed-apk-android
+            // Secrets are put to ~/.gradle/gradle.properties
+            if (project.hasProperty('SW_UPLOAD_STORE_FILE')) {
+                signingConfig signingConfigs.release
+            }
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
