--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sovryn-mobile",
+  "name": "SovrynMobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,7 +19,6 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "@sentry/react-native": "^3.2.10",
     "@types/react-native-modals": "^0.19.2",
     "ansi-regex": "^5.0.1",
     "appcenter": "^4.4.3",
@@ -38,6 +37,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-aes-crypto": "^2.0.0",
+    "react-native-code-push": "^7.0.4",
     "react-native-crypto": "^2.2.0",
     "react-native-default-preference": "^1.4.3",
     "react-native-device-info": "^8.4.8",
