feat(transactions): trasactions history

--- a/package.json
+++ b/package.json
@@ -45,12 +45,15 @@
     "react-native-get-random-values": "^1.7.1",
     "react-native-keychain": "^8.0.0",
     "react-native-modals": "^0.22.3",
+    "react-native-pager-view": "^5.4.9",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-restart": "^0.0.23",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-svg": "^12.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.1.1",
     "readable-stream": "1.0.33",
     "stream-browserify": "^1.0.0"
   },
@@ -64,6 +67,7 @@
     "@types/node": "^17.0.8",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolve": "^0.0.12",
     "babel-plugin-module-resolver": "^4.1.0",
