fix(workflow): corrects condition

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@v1
-      if: ${{ matrix.language }} == 'javascript'
+      if: ${{ matrix.language == 'javascript' }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
