--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'java', 'javascript' ]
+        language: [ 'javascript' ]
 
     steps:
     - name: Checkout repository
@@ -31,7 +31,6 @@ jobs:
 
     - name: Autobuild
       uses: github/codeql-action/autobuild@v1
-      if: ${{ matrix.language == 'javascript' }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
