internal: add @grinry as codeowner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
-/ios/ @harmaus
-/android/ @harmaus
-/src/ @harmaus
-/package.json @harmaus
-/yarn.lock @harmaus
+/ios/ @harmaus @grinry
+/android/ @harmaus @grinry
+/src/ @harmaus @grinry
+/package.json @harmaus @grinry
+/yarn.lock @harmaus @grinry
