--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.66.3",
     "react-native-aes-crypto": "^2.0.0",
     "react-native-code-push": "^7.0.4",
+    "react-native-console-time-polyfill": "^1.2.3",
     "react-native-crypto": "^2.2.0",
     "react-native-default-preference": "^1.4.3",
     "react-native-device-info": "^8.4.8",
