feat(address-book): scan qr code for address field

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ android {
         configurations.all {
             resolutionStrategy { force 'androidx.core:core:1.6.0' }
         }
+        missingDimensionStrategy: 'react-native-camera', 'general'
         applicationId "com.defray.sovryn"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
