--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,9 @@ platform :ios, '11.0'
 target 'SovrynMobile' do
   config = use_native_modules!
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
