--- a/ios/SovrynMobile/Info.plist
+++ b/ios/SovrynMobile/Info.plist
@@ -57,5 +57,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow Sovryn Wallet to use camera for reading QR codes</string>
 </dict>
 </plist>
