--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-aes-crypto": "^2.0.0",
+    "react-native-camera": "^4.2.1",
     "react-native-code-push": "^7.0.4",
     "react-native-crypto": "^2.2.0",
     "react-native-default-preference": "^1.4.3",
@@ -46,6 +47,8 @@
     "react-native-keychain": "^8.0.0",
     "react-native-modals": "^0.22.3",
     "react-native-pager-view": "^5.4.9",
+    "react-native-permissions": "^3.2.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-restart": "^0.0.23",
