feat(address-book): bookmark wallet addresses (#80)
* feat(address-book): bookmark wallet addresses

* feat(address-book): scan qr code for address field

* feat(address-book): address field fixes for android

* fix(ios): multiline textfield for addresses

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
     defaultConfig {
         configurations.all {
             resolutionStrategy { force 'androidx.core:core:1.6.0' }
+            missingDimensionStrategy 'react-native-camera', 'general'
         }
         applicationId "com.defray.sovryn"
         minSdkVersion rootProject.ext.minSdkVersion
