--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/netinfo": "^7.1.12",
+    "@react-native-firebase/analytics": "^14.5.0",
+    "@react-native-firebase/app": "^14.5.0",
+    "@react-native-firebase/crashlytics": "^14.5.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
