fix: make custom refresh control to allow dark theme

--- a/ios/SovrynMobile/Info.plist
+++ b/ios/SovrynMobile/Info.plist
@@ -59,5 +59,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>FIREBASE_ANALYTICS_COLLECTION_ENABLED</key>
+	<string>$(FIREBASE_ANALYTICS_COLLECTION_ENABLED)</string>
+	<key>FirebaseScreenReportingEnabled</key>
+	<string>$(FIREBASE_ANALYTICS_COLLECTION_ENABLED)</string>
 </dict>
 </plist>
