--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "react-native-restart": "^0.0.23",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^3.1.1",
+    "react-native-toast-notifications": "^3.2.3",
     "readable-stream": "1.0.33",
     "rn-tooltip": "^3.0.1",
     "stream-browserify": "^1.0.0"
