--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 11 Pro Max (13.7)'",
+    "ios:devices": "xcrun simctl list devices",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -31,6 +32,7 @@
     "bip32": "^3.0.1",
     "bip39": "^3.0.4",
     "buffer": "^4.9.2",
+    "dayjs": "^1.11.0",
     "eth-lib": "^0.1.29",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.2",
@@ -89,7 +91,8 @@
     "typescript": "^4.4.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^17",
+    "minimist": ">=1.2.6"
   },
   "jest": {
     "preset": "react-native",
