chore: removes harmaus from codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
-/ios/ @harmaus @grinry
-/android/ @harmaus @grinry
-/src/ @harmaus @grinry
-/package.json @harmaus @grinry
-/yarn.lock @harmaus @grinry
+/ios/ @grinry
+/android/ @grinry
+/src/ @grinry
+/package.json @grinry
+/yarn.lock @grinry
