--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@ethersproject/shims": "^5.5.0",
     "@notifee/react-native": "^4.1.0",
-    "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-async-storage/async-storage": "^1.13",
+    "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/netinfo": "^7.1.12",
     "@react-native-firebase/analytics": "^14.5.0",
     "@react-native-firebase/app": "^14.5.0",
@@ -85,6 +85,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
     "rn-nodeify": "^10.3.0",
