--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,35 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '12.0'
 
+# def __apply_Xcode_14_3_RC_post_install_workaround(installer)
+#   installer.pods_project.targets.each do |target|
+#     target.build_configurations.each do |config|
+#       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = "arm64"
+#       current_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET']
+#       minimum_target = min_ios_version_supported
+#       if current_target.to_f < minimum_target.to_f
+#         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = minimum_target
+#       end
+#     end
+#   end
+# end
+
+def __xcode_15_workaround(installer)
+  xcode_version_output = `xcodebuild -version`
+  xcode_version_match = xcode_version_output.match(/Xcode (\d+(\.\d+)?)/)
+
+  if xcode_version_match
+    xcode_version = Gem::Version.new(xcode_version_match[1])
+    if xcode_version >= Gem::Version.new('15.0')
+      installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
+        end
+      end
+    end
+  end
+end
+
 target 'SovrynMobile' do
   config = use_native_modules!
 
@@ -31,8 +60,11 @@ target 'SovrynMobile' do
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    # __apply_Xcode_14_3_RC_post_install_workaround(installer)
+    __xcode_15_workaround(installer)
     installer.pods_project.build_configurations.each do |config|
       config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
     end
   end
 end
